# tfidf-summarizer.rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build_android.sh
.github/workflows/: build_linux_static_libs.yml
debian/summarizer/: summarizer.h
examples/android/: README.md  settings.gradle.kts
examples/android/app/: build.gradle.kts
examples/android/app/libs/: summarizer-release.aar
examples/android/app/release/: output-metadata.json
examples/android/app/src/androidTest/java/com/projects/ml/tfidftextsummarizer/: ExampleInstrumentedTest.kt
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/java/com/projects/ml/tfidftextsummarizer/: MainActivity.kt
examples/android/app/src/main/java/com/projects/ml/tfidftextsummarizer/ui/theme/: Color.kt  Theme.kt  Type.kt
examples/android/app/src/main/res/values/: strings.xml  themes.xml
examples/android/app/src/test/java/com/projects/ml/tfidftextsummarizer/: ExampleUnitTest.kt
examples/android/gradle/: libs.versions.toml
examples/android/gradle/wrapper/: gradle-wrapper.properties
examples/android/summarizer/: build.gradle.kts
examples/android/summarizer/src/androidTest/java/com/projects/ml/summarizer/: ExampleInstrumentedTest.kt
examples/android/summarizer/src/main/java/com/projects/ml/summarizer/: Summarizer.kt
examples/android/summarizer/src/test/java/com/projects/ml/summarizer/: ExampleUnitTest.kt
examples/c/: README.md  main.c  wiki.txt
examples/python/: main.py  summarizer.py
src/: lib.rs  summarizer.rs  tokenizer.rs
